kubernetes/apps/clickstack/overlays/shared/ingress-hyperdx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyperdx
  namespace: clickstack
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: clickstack-clickstack-basicauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: logs.shared.h.svenlito.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickstack-hdx-oss-v2-app
                port:
                  number: 3000
  tls:
    - hosts:
        - logs.shared.h.svenlito.com
