kubernetes/apps/clickstack/overlays/shared/ingress-otlp.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otlp
  namespace: clickstack
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: otlp.shared.h.svenlito.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickstack-hdx-oss-v2-otel-collector
                port:
                  number: 4318
  tls:
    - hosts:
        - otlp.shared.h.svenlito.com
